--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,18 @@ dependencies {
    compile("com.fazecast:jSerialComm:[2.0.0,3.0.0)")
    implementation 'com.github.lolhol:AStarPathFinderJava:V1'
    implementation 'com.github.lolhol:GridBoardModuleJava:1.0'
+   implementation files('libs/BreezySLAM-1.0.jar')
+   implementation files('libs/Cartographer4Java.jar')
 
    testCompile("ch.qos.logback:logback-classic:1.2.3")
    testCompile("junit:junit:4.12")
    testCompile("org.hamcrest:hamcrest-all:1.3")
    testCompile("org.mockito:mockito-all:1.10.19")
+}
+
+task runDemo(type: JavaExec) {
+   classpath = sourceSets.test.runtimeClasspath
+   main = "examples.Demo"
 }
 
 //Compile
